Fix scrollbars showing on username list

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,7 +41,7 @@ a{
     color: #ccc;
     background-color: rgba(0,0,0,0.7);
     .names {
-        overflow: scroll;
+        overflow: auto;
         width: 100%;
         max-height: 600px;
         ul {
